--- a/Worldwide/world.html
+++ b/Worldwide/world.html
@@ -120,8 +120,8 @@
     </div>
 
     <script>
-        const apiKey = "d014fae67d1b02aae2cad8600d8f9fcd";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=";
+        const apiKey = "";
+        const apiUrl = "";
 
         const timeZoneCities = {
     "Iceland": { "Reykjavik": "+0" },
